--- a/BMSVacancies.html
+++ b/BMSVacancies.html
@@ -39,9 +39,9 @@
                     </div>
                     <div class="aboutUsWrap" id="aboutUs">
                         <div class="aboutUs">
-                            <h2>Вакансия <span class="logoText">«Рекрутера»</span> по поиску моделей</h2>
+                            <h2>Вакансия <span class="logoText">«Агента»</span> по поиску моделей</h2>
                             <p>Вакансия открыта:</p>
-                            <p>Требуется рекрутер по поиску моделей, зарплата сдельная, зависит от количества найденых моделей.</p>
+                            <p>Поиск и привлечение моделей для вебкам студии Brilliant Models. Дорогие агенты, будьте уверены, что вашим вебкам моделям понравится работать у нас. В свою очередь мы вас щедро вознаградим.</p>
                             <button class="apply"><a class="scroll-to" href="#form">Оставить заявку</a></button>
                         </div>
                     </div>
@@ -87,7 +87,7 @@
                         <div class="aboutBMS">
                             <h3>О студии</h3>
                             <ul>
-                                <li><a class="scroll-to" href="#aboutUs">WebCam-Студия</a></li>
+                                <li><a href="index.html">WebCam-Студия</a></li>
                                 <li><a href="BMSVacancies.html">Вакансии</a></li>
                                 <li><a href="BMSCallBack.html">Отзывы</a></li>
                                 <li><a class="scroll-to" href="#atention">Контакты</a></li>
@@ -112,7 +112,7 @@
                         <div class="ourContactCol">
                             <a href="https://t.me/" class="connectUs">Напишите нами в телеграм</a>
                             <a href="#form">или оставте свою заявку на сайте в форме</a>
-                            <button class="apply formBtn btnContact"><a href="#form">Оставить заявку</a></button>
+                            <button class="apply formBtn btnContact"><a href="BMSForm.html">Оставить заявку</a></button>
                         </div>
                         <div class="telegramFooterWrap">
                             <p>Перейдите по ссылке ниже на наш телеграм канал:</p>
