--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
                         <!--<button class="btn">Оставить заявку</button>-->
                         <ul class="navigation">
                             <li><a class="scroll-to" href="#aboutWork">О WebCam</a></li>
-                            <li><a class="scroll-to" href="#advantages">Преимущества</a></li>
+                            <li><a class="scroll-to" href="#aboutUs">О "BMS"</a></li>
+                            <li><a class="scroll-to" href="#advantages">Наши плюсы</a></li>
+                            <li><a href="BMSStudio.html">Наши студии</a></li>
                             <li><a href="BMSVacancies.html">Вакансии</a></li>
                             <li><a href="BMSCallBack.html">Отзывы</a></li>
-                            <li><a href="BMSQuestions.html">Вопросы</a></li>
-                            <li><a class="scroll-to" href="#aboutUs">Студия</a></li>
+                            <li><a href="BMSQuestions.html">Частые вопросы</a></li>
                             <li><a class="scroll-to" href="#atention">Контакты</a></li>
                         </ul>
                         <div class="sideMenu">
@@ -227,10 +228,10 @@
                         <div class="ourServices">
                             <h3>Наши услуги</h3>
                             <ul>
-                                <li><a class="scroll-to" href="#form">Работа вебкам</a></li>
-                                <li><a class="scroll-to" href="#form">Работа для девушек</a></li>
+                                <li><a class="scroll-to" href="#aboutWork">Работа вебкам</a></li>
+                                <li><a href="BMSVacancies.html">Работа для девушек</a></li>
                                 <li><a class="scroll-to" href="#form">Работа на дому</a></li>
-                                <li><a class="scroll-to" href="#form">Вакансия веб-модель</a></li>
+                                <li><a href="BMSVacancies.html">Вакансия веб-модель</a></li>
                             </ul>
                         </div>
                         <div class="atention" id="atention">
@@ -269,11 +270,12 @@
             <ul class="mobSideMenuLi">
                 <li class="hideWrap"><a class="hide"></a></li>
                 <li><a class="scroll-to" href="#aboutWork">О WebCam</a></li>
+                <li><a class="scroll-to" href="#aboutUs">О "BMS"</a></li>
                 <li><a class="scroll-to" href="#advantages">Преимущества</a></li>
+                <li><a href="BMSStudio.html">Наши студии</a></li>
                 <li><a href="BMSVacancies.html">Вакансии</a></li>
                 <li><a href="BMSCallBack.html">Отзывы</a></li>
-                <li><a href="BMSQuestions.html">Вопросы</a></li>
-                <li><a class="scroll-to" href="#aboutUs">Студия</a></li>
+                <li><a href="BMSQuestions.html">Частые вопросы</a></li>
                 <li><a class="scroll-to" href="#atention">Контакты</a></li>
             </ul>
         </div>
