--- a/BMSCallBack.html
+++ b/BMSCallBack.html
@@ -25,7 +25,68 @@
                     </div>
                 </header>
                 <section class="content">
-
+                    <div class="studioPhotoWrap" id="advantages">
+                        <div class="advantagesWrap">
+                            <h3 class="callBackH3">Отзывы о работе в Brilliant Models Studio</h3>
+                            <div class="advantagesItems">
+                                <div class="horizontalAdvantage">
+                                    <div class="advantage callBackPhoto1">
+                                        <h4>Катя, 21 год</h4>
+                                        <p>Найти хорошую работу со свободным графиком и достойной оплатой нелегко. Мне повезло, что подруга рассказала мне о возможности подрабатывать вебкам-моделью. Она уже три месяца работала в этой сфере и была очень довольна. Я тоже решила попробовать и теперь понимаю, как это круто! Удобный график, легко совмещать с лекциями и факультативами. Отличная возможность подтянуть знания английского языка общаясь с людьми из разных стран, и при этом я обеспечиваю себе полную финансовую независимость! Не надо быть семи пядей во лбу, просто сиди и флиртуй с парнями.</p>
+                                    </div>
+                                    <div class="advantage callBackPhoto2">
+                                        <h4>Вика, 19 лет</h4>
+                                        <p>Я решила попробовать себя в качестве веб-модели, потому что у меня было много свободного времени, нужны были деньги и самое главное — мне было интересно. Начала ходить в студию «Сhat Room» и уже где-то через два месяца стала неплохо зарабатывать. Общение бывает разным: в основном приятные и легкие мужчины, конечно, неадекваты тоже попадаются, но с ними я все перевожу в шутку и приватные чаты вполне нормальные. Самое важное, что я приобрела для себя работая в этой сфере — это повышение самооценки. Я стала более уверенной и раскрепощённой в отношениях с мужчинами и в жизни. У меня больше нет комплексов относительно своей внешности, я научилась позировать перед камерой и легко чувствовать собеседника. И да, я хорошо зарабатываю))</p>
+                                    </div>
+                                    <div class="advantage callBackPhoto3">
+                                        <h4>Оля, 18 лет</h4>
+                                        <p>Я не так давно отучилась на визажиста и начала осваивать свою профессию в реальной жизни. Чтобы преуспеть мне была необходимо много практиковать и наработать большую базу клиентов, поэтому. Я начала делать макияж за небольшую стоимость, размещала объявления в социальных сетях, делала макияж на выставках красоты и т.п. Много работала, вкладывала все свои средства в хорошую косметику и рекламу, но денег катастрофически не хватало, стала искать работу в интернете, наткнулась на объявление о работе вебкам-моделью и решила попробовать. Хорошие деньги стала получать сразу, попутно делала макияж девушкам из студии. Сегодня я ни в чём не нуждаюсь, и даже подумываю открыть свой салон красоты.</p>
+                                    </div>
+                                    <div class="advantage callBackPhoto4">
+                                        <h4>Жанна, 25 лет</h4>
+                                        <p>Работаю в этой студии год. Все знания и опыт я приобрела в здесь. Администраторы занимались моим обучением и решением технических проблем, мониторили работу и указывали на ошибки, подсказывали. Работа в комфортной обстановке в уютных домашних интерьерах. Многие расходы студия берёт на себя — хорошая техника и камеры, костюмы, красивые фотосессии, продвижение. Без всего этого действительно хорошего заработка (не среднего в $1.000) не видать. Главное найти действительно хорошую и честную студию. Я изначально попала в «Brilliant Models», поэтому по мере моего опыта возрастал и мой заработок, так что рекомендую эту студия для старта.</p>
+                                    </div>
+                                </div>
+                                <div class="horizontalAdvantage">
+                                    <div class="advantage callBackPhoto5">
+                                        <h4>Елизавета, 33 года</h4>
+                                        <p>Я перешла в «Brilliant Models», в след за подругой, из другой студии. Я не один год в этом теме и я знала, что уровень оплаты труда в большей степени зависит от меня, а не от студии. Поэтому приоритетом был комфорт. Здесь с этим всё нормально. Отличное руководство, отдельные комнаты с кондиционерами, метро близко, т.е. всё что надо для комфортной работы. Также великолепное техническое оснащение, вообще никаких проблем с трансляциями.</p>
+                                    </div>
+                                    <div class="advantage callBackPhoto6">
+                                        <h4>Маргарита, 29 лет</h4>
+                                        <p>Почему я пришла работать в вебкам? Из-за любопытства и желания расширить свои внутренние и внешние границы. Внутренние, чтобы избавиться от рамок и стереотипов навязанными обществом, мусора за которым не видишь себя настоящую, свои истинные желания и стремления. Внешние, чтобы получить финансовую независимость и купить себе свободу от рабского найма и привязки к одному месту жительства. Хотите знать, что мне говорили мои «доброжелатели»?: «все нормальные люди работают на пятидневке, и ты должна!», «работай, чтобы в будущем заработать себе на пенсию», «будь, как все — не высовывайся», «какие Мальдивы, закатай губу и паши на двух работах». А что если я не хочу быть как все? И да, я хочу позволить себе слетать на Мальдивы не упахиваясь на двух работах!!) И вебкам обеспечивает мне всё это.</p>
+                                    </div>
+                                    <div class="advantage callBackPhoto7">
+                                        <h4>Света, 23 года</h4>
+                                        <p>Я очень долго искала работу. В основном предлагали работу в сфере эскорта или стриптиза. Мне очень нужны были деньги, но чтобы меня кто-то трогал, допустить я не могла. К моему счастью, я наткнулась на объявление о работе вебкам моделью. Студия находилась в Москве, но меня обещали обучить всем необходимым навыкам. Я не раздумывая купила билет на самолет и через пару дней уже была на студии. Так как я до этого пробовала работать дома, я знала, что тут мне точно заплатят и я знала, что в этой сфере можно заработать много денег в короткие сроки. Но когда я работала сама, я не понимала, что нужно делать, чтобы доход был стабильным и как его увеличить. На студии же мне действительно рассказывали как нужно себя вести, что нужно делать, как зацепить мемберов и так далее. В первый месяц я заработала 100 тысяч рублей. Со временем я начала вкладываться в свою внешность и в свое развитие. Я смогла сделать себе две пластические операции, забить тело татуировками, пройти множество полезных и интересных курсов, получила диплом. Сейчас я продолжаю работать и еще занимаюсь тем, что мне нравится. Потому что мне легко удается совмещать работу с моими увлечениями и парнем :D</p>
+                                    </div>
+                                    <div class="advantage callBackPhoto8">
+                                        <h4>Юля, 20 лет</h4>
+                                        <p>Я учусь в университете и подрабатываю в сети веб-моделью. Работаю 5 часов в сутки и зарабатываю больше 120 тысяч в месяц. Работа лёгкая — сиди себе перед экраном ноутбука, да общайся с американцами и европейцами. Знание языка для этого нужны минимальные. Девушкам, кто хочет попробовать себя в роли веб-модели, дам совет: с самого начала работать только через проверенных посредников, а лучше с хорошо зарекомендовавшей себя студией. Они берут на себя все организационные моменты, обучение и ещё много чего. Деньги забираю раз в месяц, как зарплату. В общем, если вы любите общаться, то работа веб-моделью, как раз для вас.</p>
+                                    </div>
+                                </div>
+                                <div class="horizontalAdvantage">
+                                    <div class="advantage callBackPhoto9">
+                                        <h4>Евгения, 18 года</h4>
+                                        <p>Красота, изящность.. это все про меня. Я очень люблю себя, свое тело, стараюсь совершенствовать его каждый день. Мне нравится, что будучи моделью я могу не только показывать себя во всей красе, но и получать огненный фидбек помимо огромной зарплаты.
+                                        </p>
+                                    </div>
+                                    <div class="advantage callBackPhoto10">
+                                        <h4>Нелли, 35 лет</h4>
+                                        <p>Для меня это не основная работа… Днем я работаю по специальности и пытаюсь развиваться по той профессии, по которой получила образование. А работа вебкам-моделью — это моё хобби, которое приносит деньги.</p>
+                                    </div>
+                                    <div class="advantage callBackPhoto11">
+                                        <h4>Кристина, 27 лет</h4>
+                                        <p>Работа вебкам-моделью стала для меня приятным открытием. Привлекли хороший заработок и индивидуальный график работы. В процессе общения с мембарами я отлично начала разбираться в косметике. Смогла раскрепоститься, повысить свой артистизм и навыки перевоплощения. Моя самооценка повышалась с каждым днём, так как комплименты сыпались регулярно. Я поняла, что внешние данные не столько важны, как общительность, доброжелательность и позитивный взгляд на жизнь.</p>
+                                    </div>
+                                    <div class="advantage callBackPhoto12">
+                                        <h4>Полина, 19 лет</h4>
+                                        <p>Я работаю в студии «Brilliant Models» уже 2 года. Учусь в институте и при этом зарабатываю хорошие деньги. Я могу позволить себе шопинг, развлечения, аренду уютной квартиры. В прошлом году я летала за границу — мои подруги о таком могут только мечтать. Хотя и приходится постоянно следить за собой, т.к. зрители халатности не любят.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </section>
                 <footer class="footer">
                     <div class="footerWrap">
@@ -57,7 +118,7 @@
                         <div class="ourContactCol">
                             <a href="https://t.me/" class="connectUs">Напишите нами в телеграм</a>
                             <a href="#form">или оставте свою заявку на сайте в форме</a>
-                            <button class="apply formBtn btnContact"><a href="#form">Оставить заявку</a></button>
+                            <button class="apply formBtn btnContact"><a href="BMSForm.html">Оставить заявку</a></button>
                         </div>
                         <div class="telegramFooterWrap">
                             <p>Перейдите по ссылке ниже на наш телеграм канал:</p>
