--- a/BMSForm.html
+++ b/BMSForm.html
@@ -31,7 +31,7 @@
                             <p>Если ты ищешь высокооплачиваемую работу в Харькове и тебя заинтересовала вакансия веб-модели, хочешь задать дополнительные вопросы или тебе просто интересно узнать о тонкостях работы веб-модели, тогда заполни данную анкету и мы свяжемся с тобой в ближайшее время.</p>
                             <div class="favicon">
                                 <span class="earn">Или просто напиши нам в телеграм по ссылке ниже:</span>
-                                <a href="https://t.me/k" class="telegram" id="form"></a>
+                                <a href="https://t.me/BrilliantStudio" class="telegram" id="form"></a>
                             </div>
                         </div>
                         <div class="formWrap">
@@ -90,7 +90,7 @@
                         <h2>Наши контакты</h2>
                         <div class="city">г. Харьков</div>
                         <div class="ourContactCol">
-                            <a href="https://t.me/" class="connectUs">Напишите нами в телеграм</a>
+                            <a href="https://t.me/" class="connectUs">Напишите нам в телеграм</a>
                             <a href="#form">или оставте свою заявку на сайте в форме</a>
                             <button class="apply formBtn btnContact"><a href="#form">Оставить заявку</a></button>
                         </div>
