--- a/BMSStudio.html
+++ b/BMSStudio.html
@@ -80,7 +80,7 @@
                         <div class="aboutBMS">
                             <h3>О студии</h3>
                             <ul>
-                                <li><a class="scroll-to" href="#aboutUs">WebCam-Студия</a></li>
+                                <li><a class="scroll-to" href="index.html">WebCam-Студия</a></li>
                                 <li><a href="BMSVacancies.html">Вакансии</a></li>
                                 <li><a href="BMSCallBack.html">Отзывы</a></li>
                                 <li><a class="scroll-to" href="#atention">Контакты</a></li>
@@ -89,10 +89,10 @@
                         <div class="ourServices">
                             <h3>Наши услуги</h3>
                             <ul>
-                                <li><a class="scroll-to" href="#form">Работа вебкам</a></li>
-                                <li><a class="scroll-to" href="#form">Работа для девушек</a></li>
-                                <li><a class="scroll-to" href="#form">Работа на дому</a></li>
-                                <li><a class="scroll-to" href="#form">Вакансия веб-модель</a></li>
+                                <li><a class="scroll-to" href="BMSVacancies.html">Работа вебкам</a></li>
+                                <li><a class="scroll-to" href="BMSVacancies.html">Работа для девушек</a></li>
+                                <li><a class="scroll-to" href="BMSVacancies.html">Работа на дому</a></li>
+                                <li><a class="scroll-to" href="BMSVacancies.html">Вакансия веб-модель</a></li>
                             </ul>
                         </div>
                         <div class="atention" id="atention">
@@ -103,23 +103,23 @@
                         <h2>Наши контакты</h2>
                         <div class="city">г. Харьков</div>
                         <div class="ourContactCol">
-                            <a href="https://t.me/" class="connectUs">Напишите нами в телеграм</a>
+                            <a href="https://t.me/BrilliantStudio" class="connectUs">Напишите нам в телеграм</a>
                             <a href="#form">или оставте свою заявку на сайте в форме</a>
-                            <button class="apply formBtn btnContact"><a href="#form">Оставить заявку</a></button>
+                            <button class="apply formBtn btnContact"><a href="BMSForm.html">Оставить заявку</a></button>
                         </div>
                         <div class="telegramFooterWrap">
                             <p>Перейдите по ссылке ниже на наш телеграм канал:</p>
-                            <a href="https://t.me/k" class="telegram telegramFooter"></a>
+                            <a href="https://t.me/BrilliantStudio" class="telegram telegramFooter"></a>
                         </div>
                         <div class="mail">
                             <p>Напишите нам на почту по ссылке ниже:</p>
-                            <a href="mailto:brilliant.studio.kh@gmail.com?subject=Диалог с посетителем BMS" >brilliant.studio.kh@gmail.com</a>
+                            <a href="mailto:brilliant.studio.kh@gmail.com?subject=Диалог с посетителем BMS" >E-mail: brilliant.studio.kh@gmail.com</a>
                         </div>
                     </div>
                     <ul class="footerNetwork">
                         <li><a href="https://www.facebook.com/">FaceBook</a></li>
                         <li><a href="https://www.instagram.com/">Instagram</a></li>
-                        <li><a href="https://t.me/">Telegram</a></li>
+                        <li><a href="https://t.me/BrilliantStudio">Telegram</a></li>
                     </ul>
                     <div class="footerPolicy">
                         <div class="license">© Вебкам-студия «BMS» в Харькове, 2007-2021 г. Все права защищены.</div>
