--- a/thankyou.html
+++ b/thankyou.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>BMS</title>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title>BMS</title>
         <link rel="stylesheet" href="css/BMS.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -10,6 +10,53 @@
         <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Oleo+Script&display=swap" rel="stylesheet">
     </head>
     <body class="body">
-		<div style="color: #000;">Ваше сообщение успешно отправлено!!</div>
-	</body>
+        <div class="main" id="top">
+            <div class="page">
+                <header class="header">
+                    <div class="headerWrap">
+                        <strong class="logo"><a href="#top">BMS</a></strong>
+                        <!--<button class="btn">Оставить заявку</button>-->
+                        <ul class="navigation">
+                            <li><a href="index.html">Вернуться назад</a></li>
+                        </ul>
+                        <ul class="linkToStartWrap">
+                            <a class="linkToStart" href="index.html">Вернуться назад</a>
+                        </ul>
+                    </div>
+                </header>
+                <section class="content">
+                    <div class="thankyou">
+                        <h2>Ваша заявка успешно отправлена!</h2>
+                        <h2>Наш менеджер с вами свяжется в ближайшее время.</h2>
+                    </div>
+                </section>
+                <footer class="footer">
+                    <div class="footerWrap">
+                        <div class="atention" id="atention">
+                            <p>Студия «BMS» предлагает девушкам стабильный доход и комфортные условия работы, помогая планомерно погрузиться в тонкости вебкам-индустрии. Студия «BMS» не предоставляет и не является посредником в предоставлении услуг интимного характера. Для лиц старше 18 лет.</p>
+                        </div>
+                    </div>
+                    <div class="ourContacts">
+                        <h2>Наши контакты</h2>
+                        <div class="city">г. Харьков</div>
+                        <div class="ourContactCol">
+                            <a href="https://t.me/BrilliantStudio" class="connectUs">Если остались вопросы напиши нам в телеграм</a>
+                        </div>
+                        <div class="telegramFooterWrap">
+                            <p>Перейдите по ссылке ниже на наш телеграм канал:</p>
+                            <a href="https://t.me/BrilliantStudio" class="telegram telegramFooter"></a>
+                        </div>
+                        <div class="mail">
+                            <p>Или напиши нам на почту по ссылке ниже:</p>
+                            <a href="mailto:brilliant.studio.kh@gmail.com?subject=Диалог с посетителем BMS" >E-mail: brilliant.studio.kh@gmail.com</a>
+                        </div>
+                    </div>
+                    <div class="footerPolicy" style="border-top: 1px solid dimgray">
+                        <div class="license">© Вебкам-студия «BMS» в Харькове, 2007-2021 г. Все права защищены.</div>
+                    </div>
+                </footer>
+            </div>
+        </div>
+        <script src="js/BMSQuestions.js"></script>
+    </body>
 </html>
