--- a/BMSQuestions.html
+++ b/BMSQuestions.html
@@ -111,23 +111,23 @@
                         <h2>Наши контакты</h2>
                         <div class="city">г. Харьков</div>
                         <div class="ourContactCol">
-                            <a href="https://t.me/" class="connectUs">Напишите нами в телеграм</a>
+                            <a href="https://t.me/BrilliantStudio" class="connectUs">Напишите нам в телеграм</a>
                             <a href="#form">или оставте свою заявку на сайте в форме</a>
                             <button class="apply formBtn btnContact"><a href="BMSForm.html">Оставить заявку</a></button>
                         </div>
                         <div class="telegramFooterWrap">
                             <p>Перейдите по ссылке ниже на наш телеграм канал:</p>
-                            <a href="https://t.me/k" class="telegram telegramFooter"></a>
+                            <a href="https://t.me/BrilliantStudio" class="telegram telegramFooter"></a>
                         </div>
                         <div class="mail">
                             <p>Напишите нам на почту по ссылке ниже:</p>
-                            <a href="mailto:brilliant.studio.kh@gmail.com?subject=Диалог с посетителем BMS" >brilliant.studio.kh@gmail.com</a>
+                            <a href="mailto:brilliant.studio.kh@gmail.com?subject=Диалог с посетителем BMS" >E-mail: brilliant.studio.kh@gmail.com</a>
                         </div>
                     </div>
                     <ul class="footerNetwork">
                         <li><a href="https://www.facebook.com/">FaceBook</a></li>
                         <li><a href="https://www.instagram.com/">Instagram</a></li>
-                        <li><a href="https://t.me/">Telegram</a></li>
+                        <li><a href="https://t.me/BrilliantStudio">Telegram</a></li>
                     </ul>
                     <div class="footerPolicy">
                         <div class="license">© Вебкам-студия «BMS» в Харькове, 2007-2021 г. Все права защищены.</div>
