--- a/BMSVacancies.html
+++ b/BMSVacancies.html
@@ -39,9 +39,24 @@
                     </div>
                     <div class="aboutUsWrap" id="aboutUs">
                         <div class="aboutUs">
+                            <h2>Вакансия <span class="logoText">«Модели»</span> из дома</h2>
+                            <p>Вакансия открыта:</p>
+                            <p>Стать нашей моделью может практически любая совершеннолетняя девушка.</p>
+                            <p>Что нужно, чтобы начать зарабатывать?</p>
+                            <p>НоутБук ил ПК</p>
+                            <p>Интернет</p>
+                            <p>Web-камера</p>
+                            <p>Совершеннолетие! (18+)</p>
+                            <h2>Заработок от 400$ в месяц</h2>
+                            <p></p>
+                            <button class="apply"><a class="scroll-to" href="#form">Оставить заявку</a></button>
+                        </div>
+                    </div>
+                    <div class="aboutUsWrap" id="aboutUs">
+                        <div class="aboutUs">
                             <h2>Вакансия <span class="logoText">«Агента»</span> по поиску моделей</h2>
                             <p>Вакансия открыта:</p>
-                            <p>Поиск и привлечение моделей для вебкам студии Brilliant Models. Дорогие агенты, будьте уверены, что вашим вебкам моделям понравится работать у нас. В свою очередь мы вас щедро вознаградим.</p>
+                            <p>Поиск и привлечение моделей для вебкам студии Brilliant Models. Дорогие агенты, будьте уверены, что вашим вебкам моделям понравится работать у нас. Зарплата сдельная.</p>
                             <button class="apply"><a class="scroll-to" href="#form">Оставить заявку</a></button>
                         </div>
                     </div>
@@ -51,7 +66,7 @@
                             <p>Если ты ищешь высокооплачиваемую работу в Харькове и тебя заинтересовала вакансия веб-модели, хочешь задать дополнительные вопросы или тебе просто интересно узнать о тонкостях работы веб-модели, тогда заполни данную анкету и мы свяжемся с тобой в ближайшее время.</p>
                             <div class="favicon">
                                 <span class="earn">Или просто напиши нам в телеграм по ссылке ниже:</span>
-                                <a href="https://t.me/k" class="telegram" id="form"></a>
+                                <a href="https://t.me/BrilliantStudio" class="telegram" id="form"></a>
                             </div>
                         </div>
                         <div class="formWrap">
@@ -96,10 +111,10 @@
                         <div class="ourServices">
                             <h3>Наши услуги</h3>
                             <ul>
-                                <li><a class="scroll-to" href="#form">Работа вебкам</a></li>
-                                <li><a class="scroll-to" href="#form">Работа для девушек</a></li>
-                                <li><a class="scroll-to" href="#form">Работа на дому</a></li>
-                                <li><a class="scroll-to" href="#form">Вакансия веб-модель</a></li>
+                                <li><a class="scroll-to" href="BMSVacancies.html">Работа вебкам</a></li>
+                                <li><a class="scroll-to" href="BMSVacancies.html">Работа для девушек</a></li>
+                                <li><a class="scroll-to" href="BMSVacancies.html">Работа на дому</a></li>
+                                <li><a class="scroll-to" href="BMSVacancies.html">Вакансия веб-модель</a></li>
                             </ul>
                         </div>
                         <div class="atention" id="atention">
@@ -110,23 +125,23 @@
                         <h2>Наши контакты</h2>
                         <div class="city">г. Харьков</div>
                         <div class="ourContactCol">
-                            <a href="https://t.me/" class="connectUs">Напишите нами в телеграм</a>
+                            <a href="https://t.me/BrilliantStudio" class="connectUs">Напишите нам в телеграм</a>
                             <a href="#form">или оставте свою заявку на сайте в форме</a>
                             <button class="apply formBtn btnContact"><a href="BMSForm.html">Оставить заявку</a></button>
                         </div>
                         <div class="telegramFooterWrap">
                             <p>Перейдите по ссылке ниже на наш телеграм канал:</p>
-                            <a href="https://t.me/k" class="telegram telegramFooter"></a>
+                            <a href="https://t.me/BrilliantStudio" class="telegram telegramFooter"></a>
                         </div>
                         <div class="mail">
                             <p>Напишите нам на почту по ссылке ниже:</p>
-                            <a href="mailto:brilliant.studio.kh@gmail.com?subject=Диалог с посетителем BMS" >brilliant.studio.kh@gmail.com</a>
+                            <a href="mailto:brilliant.studio.kh@gmail.com?subject=Диалог с посетителем BMS" >E-mail: brilliant.studio.kh@gmail.com</a>
                         </div>
                     </div>
                     <ul class="footerNetwork">
                         <li><a href="https://www.facebook.com/">FaceBook</a></li>
                         <li><a href="https://www.instagram.com/">Instagram</a></li>
-                        <li><a href="https://t.me/">Telegram</a></li>
+                        <li><a href="https://t.me/BrilliantStudio">Telegram</a></li>
                     </ul>
                     <div class="footerPolicy">
                         <div class="license">© Вебкам-студия «BMS» в Харькове, 2007-2021 г. Все права защищены.</div>
