--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Oleo+Script:wght@700&family=Playball&family=Shrikhand&family=Tourney:ital,wght@1,200&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Oleo+Script&display=swap" rel="stylesheet">
     </head>
-    <body class="body">
+    <body>
 		<div class="main" id="top">
             <div class="page">
                 <header class="header">
@@ -148,6 +148,28 @@
                     <div class="applyBtn">
                         <button class="apply apply1"><a class="scroll-to" href="#form">Оставить заявку</a></button>
                     </div>
+                    <div class="applyBtn ImgPlaceWrap">
+                        <div class="aboutUsWrap aboutUsWrap2">
+                            <div class="aboutUs">
+                                <h2>Лучшие платформы</h2>
+                                <p>Веб-чаты — это сайты-сервисы, предоставляющие моделям функционал для трансляций, и все они крайне популярны. Большое количество таких проектов обуславливает широкий выбор разнообразных условий и различных правил. В качестве студии мы предлагаем работу для девушек исключительно на зарубежных ресурсах и обеспечиваем помощь в их использовании. Поэтому работая моделью с нами, ты легко сможешь выбрать зарубежный веб-чат по своему вкусу или использовать сразу несколько.</p>
+                            </div>
+                        </div>
+                        <div class="ImgPlace">
+                            <div>
+                                <img src="img/chaturbate.png">
+                                <img src="img/stripChat.png">
+                            </div>
+                            <div>
+                                <img src="img/Jasmin.png">
+                                <img src="img/camSoda.png">
+                            </div>
+                            <div>
+                                <img src="img/MFC.png">
+                                <img src="img/BongaCams.png">
+                            </div>
+                        </div>
+                    </div>
                     <div class="interest">
                         <div class="interestPadding">
                             <h3>У нас всё просто</h3>
@@ -183,7 +205,7 @@
                             <p>Если ты ищешь высокооплачиваемую работу в Харькове и тебя заинтересовала вакансия веб-модели, хочешь задать дополнительные вопросы или тебе просто интересно узнать о тонкостях работы веб-модели, тогда заполни данную анкету и мы свяжемся с тобой в ближайшее время.</p>
                             <div class="favicon">
                                 <span class="earn">Или просто напиши нам в телеграм по ссылке ниже:</span>
-                                <a href="https://t.me/k" class="telegram" id="form"></a>
+                                <a href="https://t.me/BrilliantStudio" class="telegram" id="form"></a>
                             </div>
                         </div>
                         <div class="formWrap">
@@ -242,23 +264,23 @@
                         <h2>Наши контакты</h2>
                         <div class="city">г. Харьков</div>
                         <div class="ourContactCol">
-                            <a href="https://t.me/" class="connectUs">Напишите нами в телеграм</a>
+                            <a href="https://t.me/BrilliantStudio" class="connectUs">Напишите нам в телеграм</a>
                             <a href="#form">или оставте свою заявку на сайте в форме</a>
                             <button class="apply formBtn btnContact"><a class="scroll-to" href="#form">Оставить заявку</a></button>
                         </div>
                         <div class="telegramFooterWrap">
                             <p>Перейдите по ссылке ниже на наш телеграм канал:</p>
-                            <a href="https://t.me/k" class="telegram telegramFooter"></a>
+                            <a href="https://t.me/BrilliantStudio" class="telegram telegramFooter"></a>
                         </div>
                         <div class="mail">
                             <p>Напишите нам на почту по ссылке ниже:</p>
-                            <a href="mailto:brilliant.studio.kh@gmail.com?subject=Диалог с BrilliantModels" >brilliant.studio.kh@gmail.com</a>
+                            <a href="mailto:brilliant.studio.kh@gmail.com?subject=Диалог с BrilliantModels" >E-mail: brilliant.studio.kh@gmail.com</a>
                         </div>
                     </div>
                     <ul class="footerNetwork">
                         <li><a href="https://www.facebook.com/">FaceBook</a></li>
                         <li><a href="https://www.instagram.com/">Instagram</a></li>
-                        <li><a href="https://t.me/">Telegram</a></li>
+                        <li><a href="https://t.me/BrilliantStudio">Telegram</a></li>
                     </ul>
                     <div class="footerPolicy">
                         <div class="license">© Вебкам-студия «BMS» в Харькове, 2007-2021 г. Все права защищены.</div>
