--- a/BMSQuestions.html
+++ b/BMSQuestions.html
@@ -42,7 +42,7 @@
                                 <p class="text"><a href="#">Как часто происходят выплаты зарплаты?</a></p>
                                 <div class="sabmenu">
                                     <p class="text">
-                                        Новенькие модели могут забрать деньги сразу после смены первые несколько дней. Мы также ценим тех, кто работает выше среднего и даем возможность ежедневной выплаты. Регулярные выплаты по понедельникам. Чётко, без задержек. Мы сами были моделями и знаем, насколько это важно.
+                                        Новенькие модели могут забрать деньги сразу после смены первые несколько дней. Мы также ценим тех, кто работает выше среднего и даем возможность ежедневной выплаты. Регулярные выплаты 2 раза в месяц. Чётко, без задержек. Мы сами были моделями и знаем, насколько это важно.
                                     </p>
                                 </div>
                             </div>
@@ -60,7 +60,7 @@
                                 <p class="text"><a href="#">Нужна ли модельная внешность?</a></p>
                                 <div class="sabmenu">
                                     <p class="text">
-                                        Аудитория вебкам сайтов настолько большая, что девушки и парни разных категорий и типажей обязательно найдут своих зрителей, а тренер студии Brilliant Models поможет тебе найти свой индивидуальный образ и манеру поведения. Консультация с тренером абсолютно бесплатная!
+                                        Аудитория вебкам сайтов настолько большая, что девушки разных категорий и типажей обязательно найдут своих зрителей, а тренер студии Brilliant Models поможет тебе найти свой индивидуальный образ и манеру поведения. Консультация с тренером абсолютно бесплатная!
                                     </p>
                                 </div>
                             </div>
