--- a/BMSVacancies.html
+++ b/BMSVacancies.html
@@ -32,7 +32,7 @@
                             <p>Стать нашей моделью может практически любая совершеннолетняя девушка.</p>
                             <p>Внешние данные для работы вебкам-моделью не важны: главное любить общаться, уметь поддержать интересный разговор.</p>
                             <p>В ваши обязанности будет входить общение в онлайн-видеочате на иностранных платформах. Вы будете общаться с различными людьми на платной основе.</p>
-                            <p>Вакансия вебкам-модели доступна для девушек старше 18 лет, без ограничений по комплекции и дресс-коду. Для начинающих моделей мы предоставляем приятные бонусы и бесплатное обучение. Новые сотрудники получают свой заработок сразу после смены ежедневно. Только на нашей Brilliant Studio предусмотрена уникальная бонусная система для моделей. Все условия и бонусы подбираются для моделей индивидуально, по завершению первого месяца работы.</p>
+                            <p>Вакансия вебкам-модели доступна для девушек старше 18 лет, без ограничений по комплекции и дресс-коду. Для начинающих моделей мы предоставляем приятные бонусы и бесплатное обучение. Новые сотрудники получают свой заработок сразу после смены ежедневно. Только в нашей студии Brilliant Models предусмотрена уникальная бонусная система для моделей. Все условия и бонусы подбираются для моделей индивидуально, по завершению первого месяца работы.</p>
                             <h2>Заработок от 2000$ в месяц</h2>
                             <button class="apply"><a class="scroll-to" href="#form">Оставить заявку</a></button>
                         </div>
@@ -48,7 +48,6 @@
                             <p>Web-камера</p>
                             <p>Совершеннолетие! (18+)</p>
                             <h2>Заработок от 400$ в месяц</h2>
-                            <p></p>
                             <button class="apply"><a class="scroll-to" href="#form">Оставить заявку</a></button>
                         </div>
                     </div>
