--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
                                 </div>
                                 <div class="position aboutWorkPosition8">
                                     <h3>СВОБОДНЫЙ ГРАФИК</h3>
-                                    <p>График работы современной веб-модели составляет 5 дней в неделю по 5-8 часов в смену, с часовыми перерывами на обед и отдых. Основная часть рабочего времени — общение с поклонниками. Студия доступна круглосуточно, а значит, ты можешь выбрать для себя наиболее подходящий период, распланировав своё рабочее время так, чтобы оно идеально сочеталось с твоим ритмом жизни. Составь свой индивидуальный график и зарабатывай, когда тебе удобно!</p>
+                                    <p>График работы современной веб-модели в среднем составляет 5 дней в неделю по 5-8 часов в смену, с часовыми перерывами на обед и отдых. Студия доступна круглосуточно, а значит, ты можешь выбрать для себя наиболее подходящий период, распланировав своё рабочее время так, чтобы оно идеально сочеталось с твоим ритмом жизни. Составь свой индивидуальный график и зарабатывай, когда тебе удобно!</p>
                                 </div>
                                 <div class="position aboutWorkPosition9">
                                     <h3>ОПЫТ НЕ ТРЕБУЕТСЯ</h3>
-                                    <p>Всему, что требуется знать, мы обучим непосредственно в нашей студии. Ознакомительная часть с основами профессии вебкам-модели идёт на собеседовании. В первый рабочий день производится регистрация и основная часть обучения, включая пробный выход в эфир . Поверь, это даже проще, чем звучит. Ты быстро освоишься!</p>
+                                    <p>Всему, что требуется знать, мы обучим непосредственно в нашей студии. Ознакомительная часть с основами профессии вебкам-модели идёт на собеседовании. В первый рабочий день производится регистрация и основная часть обучения, включая пробный выход в эфир. Поверь, это даже проще, чем звучит. Ты быстро освоишься!</p>
                                 </div>
                                 <div class="position aboutWorkPosition10">
                                     <h3>ПОДТЯНИ АНГЛИЙСКИЙ</h3>
@@ -109,7 +109,7 @@
                                 <div class="horizontalAdvantage">
                                     <div class="advantage">
                                         <h4>Свободный график</h4>
-                                        <p>В наашей студии рабочий график, можно запросто совмещать с учебой и личной жизнью: график составляется под каждую модель индивидуально, с учетом ее пожеланий</p>
+                                        <p>В нашей студии рабочий график, можно запросто совмещать с учебой и личной жизнью: график составляется под каждую модель индивидуально, с учетом ее пожеланий</p>
                                     </div>
                                     <div class="advantage advPhoto1">
                                         <h4>Большие выплаты</h4>
@@ -157,16 +157,17 @@
                         </div>
                         <div class="ImgPlace">
                             <div>
+                                <img src="img/MFC.png">
                                 <img src="img/chaturbate.png">
-                                <img src="img/stripChat.png">
                             </div>
                             <div>
                                 <img src="img/Jasmin.png">
                                 <img src="img/camSoda.png">
                             </div>
                             <div>
-                                <img src="img/MFC.png">
+
                                 <img src="img/BongaCams.png">
+                                <img src="img/stripChat.png">
                             </div>
                         </div>
                     </div>
